tests/valid/test-dedent.nyx
fn a():
    fn b():
        pass
