tests/invalid/example-wrong.nyx
fn a():
  pass
 pass
let x = 0